refocus_cmake/include/GPC3100/Fbiad.h

FBIADAPI int WINAPI AdSetInterval(HANDLE, ULONG);
FBIADAPI int WINAPI AdGetInterval(HANDLE, ULONG *);
FBIADAPI int WINAPI AdSetFunction(HANDLE, ULONG, ULONG);
FBIADAPI int WINAPI AdGetFunction(HANDLE, ULONG, ULONG *);
FBIADAPI int WINAPI AdSetFilter(HANDLE, ULONG);
FBIADAPI int WINAPI AdGetFilter(HANDLE, ULONG*);
FBIADAPI int WINAPI AdFifoGetSamplingData(HANDLE, PVOID, PVOID, ULONG *);
FBIADAPI int WINAPI AdCommonGetPciDeviceInfo(HANDLE, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *, DWORD *);
FBIADAPI int WINAPI AdMemSetSamplingConfig(HANDLE, PADMEMSMPLREQ);
FBIADAPI int WINAPI AdMemGetSamplingConfig(HANDLE, PADMEMSMPLREQ);
FBIADAPI int WINAPI AdSetOutMode(HANDLE, ULONG, ULONG);
FBIADAPI int WINAPI AdGetOutMode(HANDLE, ULONG *, ULONG *);
FBIADAPI int WINAPI AdMemSetDiPattern(HANDLE, ULONG, ULONG *);
FBIADAPI int WINAPI AdMemGetDiPattern(HANDLE, ULONG *);
FBIADAPI int WINAPI AdBmStartSampling(HANDLE, PVOID, ULONG);
FBIADAPI int WINAPI AdCalibration(HANDLE, ULONG, ULONG, ULONG);
FBIADAPI int WINAPI AdOutputSync(HANDLE, ULONG, ULONG);