refocus_cmake/include/GPC3100/Gpcad.h

// -----------------------------------------------------------------------
//     Sampling Condition Structure for Each Channel
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChNo;
	ULONG			ulRange;
} ADSMPLCHREQ, *PADSMPLCHREQ;
// -----------------------------------------------------------------------
//     Analog Trigger Condition Structure for Each Channel
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChNo;
	float			fTrigLevel;
	float			fHysteresis;
} ADTRIGCHREQ, *PADTRIGCHREQ;
// -----------------------------------------------------------------------
//     Sampling Condition Structure for Memory
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChCount;
	ADSMPLCHREQ		SmplChReq[256];
	ULONG			ulSingleDiff;
	float			fSmplFreq;
	ULONG			ulStopMode;
	ULONG			ulPreTrigDelay;
	ULONG			ulPostTrigDelay;
	ADTRIGCHREQ		TrigChReq[2];
	ULONG			ulATrgMode;
	ULONG			ulATrgPulse;
	ULONG			ulStopTrigEdge;
	ULONG			ulEClkEdge;
	ULONG			ulFastMode;
	ULONG			ulStatusMode;
	ULONG			ulErrCtrl;
} ADMEMSMPLREQ, *PADMEMSMPLREQ;