refocus_cmake/include/GPC3100/FbiAd.bas


Declare Function AdSetInterval Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulInterval As Long) As Long
Declare Function AdGetInterval Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef ulInterval As Long) As Long
Declare Function AdSetFunction Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long, ByVal ulFunction As Long) As Long
Declare Function AdGetFunction Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChNo As Long, ByRef ulFunction As Long) As Long

Declare Function AdSetFilter Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulFilter As Long) As Long
Declare Function AdGetFilter Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef ulFilter As Long) As Long

Declare Function AdMemSetSamplingConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pAdMemSmplConfig As ADMEMSMPLREQ) As Long
Declare Function AdMemGetSamplingConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pAdMemSmplConfig As ADMEMSMPLREQ) As Long
Declare Function AdSetOutMode Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulExTrgMode As Long, ByVal ulExClkMode As Long) As Long
Declare Function AdGetOutMode Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef ulExTrgMode As Long, ByRef ulExClkMode As Long) As Long
Declare Function AdMemSetDiPattern Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulCh As Long, ByRef ulPatternTrig As Long) As Long
Declare Function AdMemGetDiPattern Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef ulPatternTrig As Long) As Long

Declare Function AdCommonGetPciDeviceInfo Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef dwDeviceID As Long, ByRef dwVendorID As Long, ByRef dwClassCode As Long, ByRef dwRevisionID As Long, ByRef dwBaseAddress0 As Long, ByRef dwBaseAddress1 As Long, ByRef dwBaseAddress2 As Long, ByRef dwBaseAddress3 As Long, ByRef dwBaseAddress4 As Long, ByRef dwBaseAddress5 As Long, ByRef dwSubsystemID As Long, ByRef dwSubsystemVendorID As Long, ByRef dwInterruptLine As Long, ByRef dwBoardID As Long) As Long
Declare Function AdFifoGetSamplingData Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pSmplData As Any, ByRef pDiData As Any, ByRef ulSmplNum As Long) As Long

Declare Function AdBmStartSampling Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByRef pBmSmplData As Any, ByVal ulSize As Long) As Long

Declare Function AdCalibration Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal ulChannel As Long, ByVal ulRange As Long, ByVal ulSingleDiff As Long) As Long
Declare Function AdOutputSync Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal TrgLine As Long, ByVal TrgMode As Long) As Long

Declare Function AdSetEndConfig Lib "fbiad.dll" (ByVal hdevicehandle As Long, ByVal Mode As Long) As Long

Declare Function CreateEvent Lib "kernel32" Alias "CreateEventA" (ByVal lpEventAttributes As Long, ByVal ManualReset As Long, ByVal bInitialState As Long, ByVal lpName As String) As Long
Declare Function WaitForSingleObject Lib "kernel32" (ByVal hHandle As Long, ByVal dwMilliseconds As Long) As Long
Declare Function CloseHandle Lib "kernel32" (ByVal hObject As Long) As Long
Declare Function ResetEvent Lib "kernel32" (ByVal hEvent As Long) As Long

